website/i18n/de/docusaurus-plugin-content-docs/version-15.0/about-the-consoles/diamond.md
---
id: diamond
title: Diamond 9
sidebar_label: Das Diamond 9
description: Diamond 9 - console design and features
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

![Diamond9](/docs/images/Diamond-Main.png)

Das Diamond 9 hat die im Folgenden beschriebenen Bereiche. Dabei gibt es zwei Modelle: das hier gezeigte D9-330 sowie das kleinere D9-215 mit nur zwei großen Touchscreens und weniger Fadern:

&nbsp;<Keys.Annotation>A</Keys.Annotation> Die drei großen **Touchscreens** (beim D9-215: zwei) zeigen 
Schaltflächen zur Auswahl von Geräten, Paletten und Gruppen. Auf dem rechten Touchscreen wird unten die 
aktuelle Belegung der Encoder sowie der 15 Macrotasten angezeigt. Am oberen und unteren Rand der linken 
Touchscreens werden die Belegungen der Playbackfader und -tasten angezeigt.

&nbsp;<Keys.Annotation>B</Keys.Annotation> Die **Playbackfader** und **Playback-Drehregler** dienen zur Auswahl und 
Steuerung von Cues, Cuelisten und Chaser und anderen konfigurierbaren Funktionen. (Das D9-215 verfügt nur über 
den rechten Teil der Fader).

&nbsp;<Keys.Annotation>C</Keys.Annotation> Der **System Prompt und Menü-Tasten** verfügen über einen eigenen Touchscreen.

&nbsp;<Keys.Annotation>D</Keys.Annotation> Die **Programmiersektion** enthält alle Steuerelemente 
zum Einrichten und Programmieren des Pultes. Mit dem darin enthaltenen **Editor-Touchscreen** werden Attributwerte 
angezeigt und verändert, während auf den **Macro/Executor-Tasten** Playbacks, häufig genutzte Tastenfolgen, 
Arbeitsumgebungen (Layouts der Displays) oder z.B. Gruppen gespeichert werden können. Links davon befindet sich die 
Ablaufsteuerung für Cuelisten sowie der T-Griff des Scene Masters.

&nbsp;<Keys.Annotation>E</Keys.Annotation> Drei kleine **Layer-Screens** dienen etwa der Anzeige von NDI-Video-Feeds 
oder für weitere Arbeitsfenster.



## Die Touchscreens

![Diamond-F-G](/docs/images/Diamond-F.png)

&nbsp;<Keys.Annotation>F</Keys.Annotation> Die **Arbeitsfenster** auf dem Touchscreen 
zeigen Buttons für Geräte, Paletten, Gruppen, Speicherplätze, Makros und anderes. 
Ebenso kann man sich den integrierten Capture Visualiser, Video-Feeds und eine Menge 
weiterer Informationen anzeigen lassen, z.B. Intensitäten oder DMX-Werte.


&nbsp;<Keys.Annotation>G</Keys.Annotation> Der Screen mit **Systemanzeige und Menütasten** 
ist die Schaltzentrale des Pultes und liefert Informationen über den jeweiligen Zustand. 
Hier werden diverse Menütasten eingeblendet, abhängig vom momentanen Arbeits- und 
Programmierablauf. Befehle dieser Buttons sind in diesem Handbuch blau dargestellt, 
z.B. <Keys.SoftKey>Edit Times</Keys.SoftKey>



## Playbacks

![Diamond-H](/docs/images/Diamond-H.png)

&nbsp;<Keys.Annotation>H</Keys.Annotation> auf den **Drehreglern** oben lassen sich 
z.B. Cues, Chaser, Cuelisten, aber auch z.B. Gruppen speichern. Der aktuelle Pegel 
wird durch den Ring um den Regler angezeigt; dessen Farbe wiederum lässt sich als 
Halo frei definieren. Im Touchscreen direkt unter den Drehreglern wird direkt die 
aktuelle Belegung und Funktion angezeigt. Weitere solche Drehregler gibt es rechts 
und links neben den Touchscreens.

&nbsp;<Keys.Annotation>I</Keys.Annotation> Mit den **Seitenwechseltasten** kann man zu verschiedenen Seiten der Playbacks wechseln.

&nbsp;<Keys.Annotation>J</Keys.Annotation> Zwei weitere Sets von **Drehreglern** 
befinden sich oberhalb der Playbackfader.

&nbsp;<Keys.Annotation>K</Keys.Annotation> Die motorisierten **Playbackfader** 
sind der wichtigste Platz, um Cues, Chaser und Cuelisten zu speichern, können aber auch 
andere Funktionen erhalten. Auch an diesen Fadern wird der momentane Stand mit farbigen 
LEDs angezeigt, und die Farbe selbst kann als Halo frei definiert werden. Auf dem 
Touchscreen oberhalb der Fader wird die momentane Funktion und weitere nützliche 
Informationen angezeigt.

&nbsp;<Keys.Annotation>L</Keys.Annotation> Mit den **Seitenwechseltasten** kann man 
zu verschiedenen Seiten der Playbacks wechseln (sowohl für die Fader als auch für 
die Drehregler).

&nbsp;<Keys.Annotation>M</Keys.Annotation> Auf den **Macrotasten** lassen sich 
sowohl Playbacks wie z.B. ein Strobe-Cue als auch häufig benutzte Abläufe von 
Tastendrücken abspeichern, die dann mit einem einzigen Tastendruck abgerufen 
werden können. Im Display direkt oberhalb der Tasten wird die aktuelle Belegung 
angezeigt. Außerdem gibt es sechs weitere Macrotasten zwischen den Playbackfadern 
sowie extra für diese ein kleines Display.

&nbsp;<Keys.Annotation>N</Keys.Annotation> Die **Ablaufsteuerung** steuert die 
Wiedergabe von Cuelisten. Dazu gehört auch der T-Griff für den Scene Master und ein 
Paar von Motorfadern zur Steuerung des aktuell verbundenen Playbacks oder Masters.

## Die Programmiersektion

![Diamond-N](/docs/images/Diamond-O.png)

&nbsp;<Keys.Annotation>O</Keys.Annotation> Mit den **Drehreglern** (Encodern) werden 
sowohl Attribute der Geräte als auch Geschwindigkeit und Überblendung von Chasern 
eingestellt. Im Touchscreen oberhalb der Räder wird angezeigt, welche Parameter 
momentan mit welchem Rad verknüpft sind. Mit den Tasten ganz rechts neben den Encodern 
lassen sich andere Funktionen auf die Encoder legen, z.B. Fadezeiten, Details von Shapes, 
oder die Steuerung des Visualisers.

&nbsp;<Keys.Annotation>P</Keys.Annotation> Der separate **Editor-Touchscreen** zeigt stets 
den Attribut-Editor an und ermöglicht damit direkt das Einstellen der gewünschten Werte, 
z.B. von Farben oder Gobos.

&nbsp;<Keys.Annotation>Q</Keys.Annotation> Mit den **Funktionstasten** sind verschiedene Funktionen verknüpft, etwa Speichern, Kopieren, Speichern auf Disk. 

&nbsp;<Keys.Annotation>R</Keys.Annotation> Mit den Tastern der **Attributauswahl** 
werden die Attribute der Geräte angewählt (z.B. Farbe, Gobo, Bewegung, Fokus), welche 
dann durch die Drehregler gesteuert werden sollen. Die jeweils aktiven Taster werden 
durch LEDs angezeigt.

&nbsp;<Keys.Annotation>S</Keys.Annotation> Mit dem **Ziffern- und Tastenfeld** lassen 
sich Werte eingeben sowie Einstellungen des Pultes ändern.

&nbsp;<Keys.Annotation>T</Keys.Annotation> Das separate **Intensity-Handrad** und das 
zugehörige Display steuern stets die Helligkeit der angewählten Geräte.

&nbsp;<Keys.Annotation>U</Keys.Annotation> Der **Trackball** steuert Pan und Tilt der 
angewählten Geräte, kann aber auch zur Steuerung des Mauszeigers verwendet werden.

## Vorderseite des Pultes

Unter der Handballenauflage an der Vorderseite des Pultes befindet sich der 
**Einschalter**, ein **USB-Anschluss** z.B. für USB-Sticks, sowie eine ausziehbare 
beleuchtete **Tastatur** z.B. für Legenden oder zum Eingeben von Suchbegriffen.

## Rückseite des Pultes, Anschlüsse

![Diamond Back Panel](/docs/images/Diamond-Back.png)

&nbsp;<Keys.Annotation>a</Keys.Annotation> Netzspannungseingang (PowerCON TRUE1), 
Hauptschalter und Unterbrecher für die USV. Schalten Sie das Pult nicht mit dem 
Hauptschalter aus, sondern fahren Sie es mit dem Einschalter auf der Vorderseite 
ordnungsgemäß herunter.

&nbsp;<Keys.Annotation>b</Keys.Annotation> Zusätzliche USB-Anschlüsse für allgemeine 
Verwendung.

&nbsp;<Keys.Annotation>c</Keys.Annotation> DMX-Eingang zum Triggern.

&nbsp;<Keys.Annotation>d</Keys.Annotation> Anschlüsse für zwei weitere Screens 
(HDMI und USB für Touchscreens).

&nbsp;<Keys.Annotation>e</Keys.Annotation> MIDI In, Thru and Out.

&nbsp;<Keys.Annotation>f</Keys.Annotation> Digitaler S/PDIF Audio-Ausgang.

&nbsp;<Keys.Annotation>g</Keys.Annotation> Schalter für rückseitiges Arbeitslicht.

&nbsp;<Keys.Annotation>h</Keys.Annotation> Vier Gigabit EtherCON Netzwerkanschlüsse 
vom integrierten Luminex Netzwerkswitch.

&nbsp;<Keys.Annotation>i</Keys.Annotation> GPIO-Triggeranschlüsse (SubD und separate Klinkenbuchse).

&nbsp;<Keys.Annotation>j</Keys.Annotation> Audio-Eingang zum Triggern.

&nbsp;<Keys.Annotation>k</Keys.Annotation> Anschlüsse für LTC (Timecode) Eingang und Loop.

&nbsp;<Keys.Annotation>m</Keys.Annotation> Weiterer Gigabit EtherCON Netzwerkanschluss.

&nbsp;<Keys.Annotation>n</Keys.Annotation> 10Gb OpticalCON Quad-Anschluss.

&nbsp;<Keys.Annotation>o</Keys.Annotation> Acht DMX512 Ausgänge.